--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -17,16 +17,21 @@
 			<h1>Quick<span class="higlight">Credit</span></h1>
 		</div>
 	<nav>
-		<ul>
-				<li><a href="Index.html">Home</a></li>
-				<li><a href="Index.html">Loans</a></li>
-				<li><a href="Index.html">About</a></li>
-				<li><a href="Index.html">Contact Us</a></li>
-				<li><a href="signup.html"><button class="nav-btn" type="button">Sign Up</button></a></li>
-				<li><a href="signin.html"><button class="nav-btn" type="button">Sign In</button></a></li>
-				
-			</ul>
-		</nav>
+    <div class="navbar">
+  		<a href="index.html">Home</a>
+  	<div class="submenu">
+    	<a class="submenu-drop" href="">Loans</a>
+    <div class="submenu-content">
+      	<a href="loanapplication.html">Apply for a Loan</a>
+      	<a href="loanhistory.html">View Loan History</a>
+    </div>
+	</div> 
+  		<a href="#">About</a>
+  		<a href="#">Contact</a>
+  		<a href="signup.html"><button class="nav-btn" type="button">Sign Up</button></a>
+  		<a href="signin.html"><button class="nav-btn" type="button">Sign In</button></a>
+	</div>
+	</nav>
 	</div>
 </header>
 <section class="form-container">
