--- a/loanapplication.html
+++ b/loanapplication.html
@@ -23,7 +23,7 @@
     	<a class="submenu-drop" href="">Loans</a>
     <div class="submenu-content">
       	<a href="loanapplication.html">Apply for a Loan</a>
-      	<a href="loanrepayment.html">View Loan History</a>
+      	<a href="loanhistory.html">View Loan History</a>
     </div>
 	</div> 
   		<a href="#">About</a>
