Fixes(bg-fixes-and-updates-to-quick-credit)

--- a/UI/index.html
+++ b/UI/index.html
@@ -8,6 +8,7 @@
 	<meta name="keywords" content="loans, quick credit, online lending, short term loans, low income earners">
 	<meta name="author" content="Dapo Adewuyi">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" type="image/x-icon" href="img/QuickCreditlogo.ico" />
 	<title>Quick Credit | Welcome</title>
 </head>
 <body>
@@ -18,7 +19,6 @@
 		</div>
 	<nav>
     <div class="navbar">
-  		<a href="index.html">Home</a>
   	<div class="submenu">
     	<a class="submenu-drop" href="">Loans</a>
     <div class="submenu-content">
@@ -51,17 +51,17 @@
 	<div class="container">
 		<div class="customer">
 			<img src="img/customer1.jpg" alt="customer1">
-			<h3>Customer name</h3>
+			<h3>Montell Jordan</h3>
 			<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
 		</div>
 		<div class="customer">
 			<img src="img/customer1.jpg" alt="customer2">
-			<h3>Customer name</h3>
+			<h3>Donell Jones</h3>
 			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
 		</div>
 		<div class="customer">
 			<img src="img/customer1.jpg" alt="customer3">
-			<h3>Customer name</h3>
+			<h3>Usher Raymond</h3>
 			<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
 		</div>
 	</div>
