--- a/UI/adminpage.html
+++ b/UI/adminpage.html
@@ -8,7 +8,9 @@
 	<meta name="keywords" content="loans, quick credit, online lending, short term loans, low income earners">
 	<meta name="author" content="Dapo Adewuyi">
 	<link rel="stylesheet" href="css/admin.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="shortcut icon" type="image/x-icon" href="img/QuickCreditlogo.ico" />
+
 	<title>Quick Credit | Admin</title>
 </head>
 <body>
